\newcommand{\ghpr}{\href{https://github.com/KevCaz/graphicsutils/pull/#1}{##1}}
\newcommand{\ghit}{\href{https://github.com/KevCaz/graphicsutils/issues/#1}{##1}}


\section{Changes in graphicsutils version 1.1-2 (Unreleased)}{
  \itemize{
    \item Addition of R functions:
    \itemize{
      \item So far nothing
    }
    \item Changes in existing R functions:
    \itemize{
      \item \code{showPalette()} now displays the first colors of the palette properly. 
      \item \code{showPalette()} show the color in palette() by default. 
      \item Must of functions that creates new plots now ends by \code{invisible(NULL)}.
      \item \code{graphicsutils.R} has been renamed \code{zzz.R} and introduce a
      startup message including the version of the package.
    }
    \item Changes in the package structure:
    \itemize{
      \item some improvement in the code coverage.
    }
  }
}


\section{Changes in graphicsutils version 1.1-1 (Unreleased)}{
  \itemize{
    \item Addition of R functions:
    \itemize{
      \item New R functions \code{toFig()} and \code{toFig()} that allow conversion from figure
      region coordinates to the user coordinates and conversely.
      \item New R function encircle that encirle points.
      \item New R function \code{box2()}, a flexible version of \code{box()}.
      \item New R functions \code{ramp()}, \code{darken()}, \code{lighten()} to ease the creation of color shades.
    }
    \item Changes in existing R functions:
    \itemize{
      \item Add the proper namespace for all functions used for \code{grDevices}
      and \code{graphics} package.
      \item \code{plot0()} now has a \code{fill} argument that calls \code{plotAreaColor()} tp color
      the plot region.
      \item a vignette has been added to showcase the package.
    }
    \item Changes in the package structure:
    \itemize{
      \item remove todo and deprecated folder in R folder.
    }
  }
}

